log
Thu 13 Apr 2023 10:50:30 PM UTC: 
 tests:  0|6
total_score: 0/70
8867c63
Fri 14 Apr 2023 08:48:02 PM UTC: 
 hashmap.c | 29 +++++++++++++++++------------
 1 file changed, 17 insertions(+), 12 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘hash’:
hashmap.c:33:5: error: ‘ash’ undeclared (first use in this function); did you mean ‘hash’?
   33 |     ash += hash*32 + tolower(*ptr);
      |     ^~~
      |     hash
hashmap.c:33:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1a3ef69
Fri 14 Apr 2023 08:48:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4d8697f
Fri 14 Apr 2023 08:54:57 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
3e71bdf
Fri 14 Apr 2023 08:56:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a496bc0
Fri 14 Apr 2023 08:58:45 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
e21a3a6
Fri 14 Apr 2023 09:04:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
39ec25f
Fri 14 Apr 2023 09:06:27 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   60 |   mapa->buckets = (HashMap*) malloc(sizeof(HashMap));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
59c582c
Fri 14 Apr 2023 09:06:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   60 |   mapa->buckets = (HashMap**) malloc(sizeof(HashMap));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
8a37119
Fri 14 Apr 2023 09:06:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘mapa’ is a pointer; did you mean to use ‘->’?
   60 |   mapa.buckets = (HashMap**) malloc(sizeof(HashMap));
      |       ^
      |       ->
Compilation failed
59cb71e
Fri 14 Apr 2023 09:07:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   60 |   mapa->buckets = (HashMap**) malloc(sizeof(HashMap));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
c5b402a
Fri 14 Apr 2023 09:08:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   60 |   mapa->buckets = (HashMap**) realloc(mapa->buckets, mapa->capacity * sizeof(HashMap*));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
316c519
Fri 14 Apr 2023 09:09:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e0b1d07
Fri 14 Apr 2023 09:14:26 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
6815fa3
Fri 14 Apr 2023 09:14:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
25e95dc
Fri 14 Apr 2023 09:17:11 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6bbbde1
Fri 14 Apr 2023 09:21:17 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:8: error: unused variable ‘clave’ [-Werror=unused-variable]
   48 |   long clave = hash(key, map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d06721e
Fri 14 Apr 2023 09:22:07 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:8: error: variable ‘clave’ set but not used [-Werror=unused-but-set-variable]
   48 |   long clave;
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
5e934ae
Fri 14 Apr 2023 09:23:10 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:8: error: unused variable ‘codigo’ [-Werror=unused-variable]
   48 |   long codigo = hash(key, map->capacity);
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b7bff6d
Fri 14 Apr 2023 09:23:50 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
5c90424
Fri 14 Apr 2023 09:29:41 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:12: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   51 |     codigo = createPair(key, value);
      |            ^
hashmap.c:48:8: error: variable ‘codigo’ set but not used [-Werror=unused-but-set-variable]
   48 |   long codigo = hash(key, map->capacity);
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b45b12a
Fri 14 Apr 2023 09:30:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:19: error: comparison between pointer and integer [-Werror]
   49 |   if(map->buckets == codigo)
      |                   ^~
hashmap.c:51:12: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   51 |     codigo = createPair(key, value);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
a65c0b6
Fri 14 Apr 2023 09:32:47 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:18: error: assignment to ‘Pair **’ from ‘long int’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |     map->buckets = codigo;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
184f771
Fri 14 Apr 2023 09:38:18 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:21: error: comparison between pointer and integer [-Werror]
   48 |   for(long i = 0; i < map->buckets; i++)
      |                     ^
hashmap.c:50:34: error: passing argument 2 of ‘is_equal’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |     if(is_equal(map->buckets[i], codigo) == 0)
      |                                  ^~~~~~
      |                                  |
      |                                  long int
hashmap.c:38:32: note: expected ‘void *’ but argument is of type ‘long int’
   38 | int is_equal(void* key1, void* key2)
      |                          ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
782378c
Fri 14 Apr 2023 09:39:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:21: error: comparison between pointer and integer [-Werror]
   48 |   for(long i = 0; i < map->buckets; i++)
      |                     ^
hashmap.c:50:34: error: invalid type argument of unary ‘*’ (have ‘long int’)
   50 |     if(is_equal(map->buckets[i], *codigo) == 0)
      |                                  ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5a5e26f
Fri 14 Apr 2023 09:43:27 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:21: error: comparison between pointer and integer [-Werror]
   49 |   for(long i = 0; i < map->buckets; i++)
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
d57dc95
Fri 14 Apr 2023 09:43:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:21: error: comparison between pointer and integer [-Werror]
   49 |   for(long i = 0; i != map->buckets; i++)
      |                     ^~
cc1: all warnings being treated as errors
Compilation failed
f90a3e8
Fri 14 Apr 2023 09:43:59 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
af20b7c
Fri 14 Apr 2023 09:46:01 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a01dc58
Fri 14 Apr 2023 09:48:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:28: error: assignment to ‘Pair *’ from ‘long int’ makes pointer from integer without a cast [-Werror=int-conversion]
   53 |       map->buckets[codigo] = codigo;
      |                            ^
cc1: all warnings being treated as errors
Compilation failed
a7f6b3f
